Backend: Some changes in GET methods